--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "classnames": "^2.3.1",
+    "formsy-react": "^2.2.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-payment": "^0.1.8",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.2"
